# full-stack-fastapi-react

./: .gitignore  README.md
backend/: .dockerfile  .gitignore  cli.py  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  errors.py  main.py  pyproject.toml
backend/app/api/: depends.py
backend/app/api/v1/: __init__.py  index.py  login.py  user.py
backend/app/app/: config.py
backend/app/app/schemas/: __init__.py  user.py
backend/app/crud/: base.py  user.py
backend/app/models/: base.py  user.py
backend/app/providers/: crypto.py  database.py  email.py  init_db.py  jwt.py  log.py
backend/app/response/: __init__.py  base.py  msg.py  user.py
backend/app/schemas/: __init__.py  msg.py  token.py  user.py
backend/app/templates/: new_account.html
backend/app/utils/: coroutine.py
backend/docker/: .dockerfile  docker-compose.yml
backend/http/: user.http
backend/sql/: sequence.sql
backend/tests/providers/: crypto.py  jwt.py
http/: user.http
