[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.12"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
python-multipart = "^0.0.5"
email-validator = "^1.3.1"
requests = "^2.28.1"
pydantic = "^1.10.2"
alembic = "^1.4.2"
sqlalchemy = "^1.4.13"
asyncpg = "^0.27.0"
pytest = "^5.4.1"
faker = "^8.8.1"
typing = "^3.10.0.0"
bcrypt = "^3.2.0"
python-dotent = "^0.21.0"


[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^22.6.0"
isort = "^5.9.3"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
faker = "^8.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile="black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"